# ply_sphinx_docs_github_pages

./: .gitignore  Makefile  README.rst  pyproject.toml
.github/workflows/: publish.yml
docs/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_autosummary/: fibonacci.approx_fib.approx_fib.html  fibonacci.approx_fib.html  fibonacci.approx_fib_test.TestFib.html  fibonacci.approx_fib_test.html  fibonacci.html  multiplication.html  multiplication.multiply.html  multiplication.multiply.multiply_2.html  multiplication.multiply_again.html  multiplication.multiply_again.multiply_again.html  multiplication.multiply_test.TestMultiply.html  multiplication.multiply_test.html  mytoolbox.html  mytoolbox.mymodule1.html  mytoolbox.mymodule1.myClass1.html  mytoolbox.mymodule1.myError.html  mytoolbox.mymodule1.myGlobalFunction.html  mytoolbox.mymodule1.myTypeVar.html  mytoolbox.mymodule2.html  mytoolbox.mymodule2.myClass2.html  mytoolbox.mysubpackage.html  mytoolbox.mysubpackage.mymodule3.html  mytoolbox.mysubpackage.mymodule3.myClass3.html  mytoolbox.mysubpackage.mysubsubpackage.html  mytoolbox.mysubpackage.mysubsubpackage.mymodule4.html  mytoolbox.mysubpackage.mysubsubpackage.mymodule4.myClass4.html
docs/_sources/: README.rst.txt
docs/_sources/_autosummary/: fibonacci.approx_fib.approx_fib.rst.txt  fibonacci.rst.txt  (+24 more)
docsource/: Makefile  README.rst  conf.py  index.rst
fibonacci/: __init__.py  approx_fib.py  approx_fib_test.py
multiplication/: __init__.py  multiply.py  multiply_again.py  multiply_test.py
(+8 files in other folders)
