[tool.poetry]
name = "sphinx_docs_github_pages"
version = "0.1.0"
description = "Host Python Sphinx Docs on GitHub Pages"
authors = ["dMLT"]

[tool.poetry.dependencies]
python = "3.8.5"
Sphinx = "3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
